--- a/Proyecto/estilos.css
+++ b/Proyecto/estilos.css
@@ -1,4 +1,10 @@
-.title
+#title
 {
-    color: aqua;
+    color: rgb(0, 10, 6);
+    font-size: 50px;
+}
+
+#body
+{
+    background-color: rgb(2, 128, 80);
 }
