--- a/Proyecto/estilos.css
+++ b/Proyecto/estilos.css
@@ -1,10 +1,4 @@
-#title
-{
-    color: rgb(0, 10, 6);
-    font-size: 50px;
-}
-
 #body
 {
-    background-color: rgb(2, 128, 80);
+    background-color: rgba(2, 109, 16, 0.829);
 }
